<resources>
    <string name="app_name">Book Your Worker App</string>
    <string name="form_title">Form Title</string>
    <string name="form_description">Form Description</string>
    <string name="budget">Budget</string>
    <string name="payment_method">Payment Method</string>
    <string name="rate">Rate</string>
    <string name="job_term">Job Term</string>
    <string name="start_date">Start Date</string>
    <string name="attachments">Attachments</string>
    <string name="usd">USD</string>
    <string name="invite">Invite</string>
    <string name="inbox">Inbox</string>
</resources>
