<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <data>

        <variable
            name="formData"
            type="com.bookyourworkerapp.database.FormEntity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:titleTextColor="@android:color/white">


            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="-0.03"
                android:text="New Form"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="New Form" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:gravity="end">

                <TextView
                    android:id="@+id/save_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif"
                    android:text="Save"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    tools:text="Send" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FormTitleTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="120"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/form_title" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FormDescTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="330"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FormTitleTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/form_description" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/lin_budget_usd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FormDescTextInputLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/BudgetTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/FormTitleTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_budget"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/budget" />

            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:id="@+id/rel_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/img_us"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/us" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif"
                    android:textColor="#2c4e68"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:text="@string/usd"
                    tools:text="USD" />

                <View
                    android:layout_width="180dp"
                    android:layout_height="2dp"
                    android:layout_alignBottom="@id/img_us"
                    android:background="@color/colorPrimary" />

            </RelativeLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/lin_rate_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_budget_usd">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/RateTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/FormTitleTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_rate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/rate" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PayMethodTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/FormTitleTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_payment_method"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/payment_method" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_date_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_rate_payment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DateTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/FormTitleTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/start_date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TermTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/FormTitleTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_job_term"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/job_term" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <RelativeLayout
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_Attachments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:letterSpacing="-0.01"
            android:textColor="#828282"
            android:textSize="17sp"
            android:textStyle="normal"
            android:text="@string/attachments"
            tools:text="Attachments" />

            <ImageView
                android:id="@+id/btn_attachment"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_below="@id/tv_Attachments"
                android:layout_margin="4dp"
                android:src="@drawable/attachment" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>